Z-index and bug fixes.
Z-index "Bring to Front"/"Send to Back" option added for default
containers.
Playpage bug fix (the presence of containers in it was messing with
.length attribute retrievals, so now I wipe it's contents when we leave
the tab).
Resolution bug fix (calculating the center of the page overlay was
messing up when the page overlay was not open).
Generalising some of the context menu entries, so that it's easier to
use the same parts e.g. bring to front for both img containers and text
containers

--- a/stylesheets/css/interact.css
+++ b/stylesheets/css/interact.css
@@ -3,10 +3,6 @@ div {
     margin: 0px;
 }
 
-.handle{
-
-}
-
 .drag-container {
 		height: 100%;
 		width: 100%;
@@ -20,8 +16,7 @@ div {
 }
 
 .drag-element{
-/*	display: inline-block;
-*/	
+	z-index: 50; /*Room on either side to increment/decrement	containers*/
 }
 
 .drag-element.can-drop {
@@ -41,10 +36,7 @@ div {
     pointer-events:none; /*removes the possibility on drop-container blocking an image*/
 }
 
-
-
 .text-area{
-	
 	width: auto;
 	height: auto;
 	display: block;
